objects/Engage_Standard_Employer_Programs__c.object
<CustomObject>
    <fields>
        <fullName>Employer_Program_Availability_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer Program Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Program_Eligible_Members__c</fullName>
        <label>Employer Program Eligible Members</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employees Only</fullName>
                </value>
                <value>
                    <fullName>Employees + Dependents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Program_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>MAIL@EMAILVENDOR.com</inlineHelpText>
        <label>Employer Program Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer_Program_Name__c</fullName>
        <label>Employer Program Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Onsite Clinic</fullName>
                </value>
                <value>
                    <fullName>3rd Party Telehealth</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Program_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer Program Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employer_Program_Website__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter as http://www.INSERTWEBPAGE.com</inlineHelpText>
        <label>Employer Program Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Engage_Scoping_And_Engage_Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engage Scoping And Engage Standard</label>
        <referenceTo>Engage_Scoping_And_Engage_Standard__c</referenceTo>
        <relationshipLabel>Engage Standard Employer Programs</relationshipLabel>
        <relationshipName>Engage_Standard_Employer_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Suffix_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Suffix Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_Employer_Program_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other, Employer Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Engage Standard Employer Programs</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EMPP-{000}</displayFormat>
        <label>Engage Standard Employer Programs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engage Standard Employer Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>